--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+PERSONAL_CLIENT_ID=1
+PERSONAL_CLIENT_SECRET=ooycmAjwI69y8QfQ8ySoITge3WypoZPdzVFYdSfb
+PASSWORD_CLIENT_ID=2
+PASSWORD_CLIENT_SECRET=orXGUc3SrK8juiR6EOwOiiG41KhoY2fUfiloo95v
