--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 /node_modules
-/public/hot
 /public/storage
+/public/hot
 /storage/*.key
 /vendor
 /.idea
-/.vagrant
 Homestead.json
 Homestead.yaml
 .env
+vendor/
+node_modules/
+
+.DS_Store
